--- a/ANN.ipynb
+++ b/ANN.ipynb
@@ -724,13 +724,7 @@
       "8000/8000 [==============================] - 0s 57us/step - loss: 0.3382 - acc: 0.8621\n",
       "Epoch 80/100\n",
       "8000/8000 [==============================] - 0s 57us/step - loss: 0.3387 - acc: 0.8602\n",
-      "Epoch 81/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 81/100\n",
       "8000/8000 [==============================] - 0s 56us/step - loss: 0.3383 - acc: 0.8619\n",
       "Epoch 82/100\n",
       "8000/8000 [==============================] - 0s 55us/step - loss: 0.3381 - acc: 0.8599\n",
@@ -898,7 +892,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
